--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/4daf4a1723.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
