added discount section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <script src="https://kit.fontawesome.com/4daf4a1723.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header class="banner-bg">
+        <div class="banner-container">
+            <p class="banner-title">Happy New Year</p>
+            <h1 class="banner-info">New Year Party Celebration</h1>
+        </div>
+    </header>
+    <main>
+        <section class="categories">
+            <h1 class="discount">65% OFF</h1>
+            <p class="discount-title">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="categories-list">ALL CATEGORIES</h2>
+            <img src="images/New Year Photo.png" alt="">
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
