added celebration section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <h2 class="categories-list">ALL CATEGORIES</h2>
             <img src="images/New Year Photo.png" alt="">
         </section>
+
+        <section class="celebration-bg">
+            <div class="celebration-info">
+                <h1 class="celebration-title">Welcome to midnight party</h1>
+                <p class="celebration-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="join-btn">Join Now</button>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
