--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@
                 <button class="join-btn">Join Now</button>
             </div>
         </section>
+
+        <section class="holiday-info">
+            <div class="joining-info">
+                <p><span>Place</span>: New Park Hotel</p>
+                <p><span>Date</span>: 31 December Night 2023</p>
+                <p class="bottom-48"><span>Time</span>: Evening 7.30 pm to 12.30 am</p>
+                <div class="joining-btn">
+                    JOIN NOW
+                </div>
+            </div>
+
+            <section class="offer-container">
+                <div class="best-offer">
+                    <p class="offer-title">NEW BEST OFFER</p>
+                    <h1 class="offer-release">Coming Soon</h1>
+                    <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+                <div class="celebration-image">
+                    <div class="red-border"></div>
+                    <img src="images/Ellipse 1.png" alt="">
+                </div>
+                <div class="new-year-des">
+                    <h1 class="year">2024</h1>
+                    <p class="year-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="images/Group 96.png" alt="">
+                </div>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
