added discount container section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
                 </div>
             </section>
         </section>
+
+        <section class="discount-container">
+            <p class="discount-container-title">WHAT IS FUNCTIONAL</p>
+            <h1 class="discount-offer"><span>Holidays</span> Sale 50%</h1>
+            <p class="discount-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            <div class="discount-tag">
+                <h1 class="big-offer"><span>50%</span><br>Discount</h1>
+                <!-- <p class="tag-name">Discount</p> -->
+            </div>
+            
+            <div class="discount-image">
+                <img src="images/Group 75.png" alt="">
+            </div> 
+            <div class="red-box"></div> 
+        </section>
     </main>
     <footer></footer>
 </body>
