--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
             </div> 
             <div class="red-box"></div> 
         </section>
+
+        <section class="portfolio">
+            <p class="title">THE BEST GIFTS</p>
+            <h1 class="portfolio-title">Our Awesome Portfolio</h1>
+            <p class="portfolio-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="portfolio-images">
+                <img src="images/Rectangle 3.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/Rectangle 7.png" alt="">
+                <img src="images/Rectangle 8.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
