added main section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,19 @@
                 <img src="images/Rectangle 8.png" alt="">
             </div>
         </section>
+
+        <section class="subscribe">
+            <img src="images/Group 61.png" alt="">
+            <h2 class="newsletter">Subscribe Newsletter</h2>
+            <p class="subscribe-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <form action="">
+                <input type="email" name="" id="" placeholder="user@gmail.com">
+                <button class="subs-btn">Subscribe</button>
+            </form>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
