--- a/index.html
+++ b/index.html
@@ -99,7 +99,30 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="address">
+                    <p class="street-name">44, Big Building Roosevelt Street</p>
+                    <p class="house-no">Beach Gardens Florida 33410</p>
+                </div>
+                <div class="phone-address">
+                    <p class="number"><i class="fa-solid fa-phone"></i> +00 123 584 124</p>
+                    <p class="web-address"><i class="fa-solid fa-globe"></i> www.website.com</p>
+                </div>
+            </div>
+            <hr>
+            <div class="social-icons">
+                <img src="icons/Facebook.png" alt="">
+                <img src="icons/Instagram.png" alt="">
+                <img src="icons/Twitter.png" alt="">
+                <img src="icons/Linkedin.png" alt="">
+            </div>
+            <hr>
+            <div class="copyright">
+                <p class="copyright-title">2017, All Rights Reserved.</p>
+                <p class="unsubs">Unsubscribe</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
