--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <p class="celebration-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <button class="join-btn">Join Now</button>
             </div>
+            <div class="new-year">
+                <img src="images/Group 70.png" alt="">
+            </div>
         </section>
 
         <section class="holiday-info">
